小猪论坛:项目工程基本完成 jdbc日期格式改正 dao测试通过

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -11,6 +11,6 @@
 
 # modified by brucezhu 20181020
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/sampledb?useSSL=false&serverTimezone=UTC
+jdbc.url=jdbc:mysql://localhost:3306/sampledb?useSSL=false&serverTimezone=CTT
 jdbc.username=root
 jdbc.password=123456
