--- a/src/test/resources/unitils.properties
+++ b/src/test/resources/unitils.properties
@@ -1,19 +1,24 @@
+# 1.启用unitils所需的模块
 unitils.modules=database,dbunit,hibernate,spring
+
+# 2.自定义扩展模块,并解决Dbunit对mysql处理的bug
 unitils.module.dbunit.className=org.dbunit.MySqlDbUnitModule
 
+# 3.配置数据库连接
 #database
 #database.driverClassName=org.hsqldb.jdbcDriver
 #database.url=jdbc:hsqldb:data/sampledb;shutdown=true
 #database.dialect = hsqldb
 #database.userName=sa
-
-database.driverClassName=com.mysql.jdbc.Driver
-database.url=jdbc:mysql://localhost:3306/sampledb?useUnicode=true&characterEncoding=UTF-8
+database.driverClassName=com.mysql.cj.jdbc.Driver
+database.url=jdbc:mysql://localhost:3306/sampledb?useSSL=false&serverTimezone=CTT
+#jdbc:mysql://localhost:3306/sampledb?useUnicode=true&characterEncoding=UTF-8
 database.dialect = mysql
 database.userName=root
 database.password=123456
 database.schemaNames=sampledb
 
+# 4.配置数据库维护策略
 # The database maintainer is disabled by default.
 updateDataBaseSchema.enabled=false
 #This table is by default not created automatically
@@ -21,21 +26,25 @@ dbMaintainer.autoCreateExecutedScriptsTable=false
 #dbMaintainer.script.locations=D:/book/svn2/code/spring4x-project/spring4x-chapter20/src/test/resources/dbscripts
 dbMaintainer.script.locations=src/test/resources/dbscripts
 
+# 5.指定测试用的数据集工厂
 DbUnitModule.DataSet.factory.default=com.brucezhu.test.dataset.excel.MultiSchemaXlsDataSetFactory
 DbUnitModule.ExpectedDataSet.factory.default=com.brucezhu.test.dataset.excel.MultiSchemaXlsDataSetFactory
 
+# 6.指定数据集加载策略
 #CleanInsertLoadStrategy:先删除dateSet中有关表的数据，然后再插入数据
 #InsertLoadStrategy：只插入数据
 #RefreshLoadStrategy:有同样key的数据更新，没有的插入
 #UpdateLoadStrategy:有同样key的数据更新，没有的不做任何操作
 DbUnitModule.DataSet.loadStrategy.default=org.unitils.dbunit.datasetloadstrategy.impl.CleanInsertLoadStrategy
 
+# 7.配置事务策略
 #commit 是单元测试方法过后提交事务
 #rollback 是回滚事务
 #disabled 是没有事务，默认情况下，事务管理是disabled
 DatabaseModule.Transactional.value.default=commit
 
 
+# 8.配置数据集结构模式XSD的生成路径
 # XSD generator
 dataSetStructureGenerator.xsd.dirName=resources/xsd
 #dbMaintainer.generateDataSetStructure.enabled=true
