小猪论坛:涉及相对及绝对路径的问题解决完毕 已能正常操作

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,14 +1,14 @@
-log4j.rootLogger=debug, console
+log4j.rootLogger=Warn, console
 
 # Spring Stuff
-log4j.logger.org.springframework=debug,console
-log4j.logger.org.unitils=DEBUG,console
-log4j.logger.org.dbunit=DEBUG,console
+log4j.logger.org.springframework=Warn,console
+log4j.logger.org.unitils=Warn,console
+log4j.logger.org.dbunit=Warn,console
 
 # xBean Framework Stuff
-log4j.logger.cn.li=DEBUG,console
-log4j.logger.org.apache.xbean.spring=DEBUG,console
-log4j.logger.freemarker=DEBUG,console
+log4j.logger.cn.li=Warn,console
+log4j.logger.org.apache.xbean.spring=Warn,console
+log4j.logger.freemarker=Warn,console
 
 #out to Console
 log4j.appender.console=org.apache.log4j.ConsoleAppender
