--- a/pom.xml
+++ b/pom.xml
@@ -251,6 +251,12 @@
             <version>${hamcrest.version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/log4j/log4j -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
 
     </dependencies>
 
@@ -281,7 +287,8 @@
                             <maxIdleTime>60000</maxIdleTime>
                         </connector>
                     </connectors>
-                    <contextPath>/forum</contextPath>
+                    <contextPath>/${project.artifactId}</contextPath>
+                    <!--<contextPath>/forum</contextPath>-->
                     <scanIntervalSeconds>0</scanIntervalSeconds>
                 </configuration>
             </plugin>
