--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,17 +1,108 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	version="2.4"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee   http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+		 version="2.4"
+		 xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee   http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+
 	<!-- 覆盖default servlet的/, springmvc servlet将处理原来处理静态资源的映射 -->
-	<description>小春论坛</description>
-	<display-name>xiaochun</display-name>
+	<description>小猪论坛</description>
+	<display-name>xiaozhu</display-name>
+
+	<!-- ==================================================================================== -->
+	<!-- ======================  配置各层Spring启动内容    =================================== -->
+	<!-- ==================================================================================== -->
+	<!-- ======= 配置数据层及服务层的内容 ======= -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath:/applicationContext.xml</param-value>
 	</context-param>
+
+	<!-- ======= listener 根据contextConfigLocation所指定的配置文件启动"业务层"的Spring容器 ======= -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+
+	<!-- ======= xiaochun Servlet,此配置将使得Spring自动加载/WEB-INF目录下的
+	xiaochun-servlet.xml 作为配置文件，启动"Web层"的Spring容器 ======= -->
+	<servlet>
+		<servlet-name>xiaochun</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<load-on-startup>3</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>xiaochun</servlet-name>
+		<url-pattern>*.html</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>default</servlet-name>
+		<url-pattern>/static/*</url-pattern>
+	</servlet-mapping>
+
+
+
+	<!-- ==================================================================================== -->
+	<!-- === 在web项目中，当用户在浏览器中输入的URL不包含某个特定的Servlet、html、jsp页面时，	===== -->
+	<!-- === web.xml中<welcome-file-list>标签元素就会指定显示的默认文件    				===== -->
+	<!-- ==================================================================================== -->
+	<!-- ======= welcome ======= -->
+	<welcome-file-list>
+		<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
+
+
+	<!-- ==================================================================================== -->
+	<!-- ======================  配置各种过滤器			    =================================== -->
+	<!-- ==================================================================================== -->
+	<!-- ======= forumFilter ======= -->
+	<filter>
+		<filter-name>forumFilter</filter-name>
+		<filter-class>com.brucezhu.web.ForumFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>forumFilter</filter-name>
+		<url-pattern>*.html</url-pattern>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>forumFilter</filter-name>
+		<url-pattern>*.jsp</url-pattern>
+	</filter-mapping>
+
+	<!-- ======= encodingFilter ======= -->
+	<filter>
+		<filter-name>encodingFilter</filter-name>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+		<init-param>
+			<param-name>forceEncoding</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>encodingFilter</filter-name>
+		<url-pattern>*.html</url-pattern>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>encodingFilter</filter-name>
+		<url-pattern>*.jsp</url-pattern>
+	</filter-mapping>
+
+	<!--
+		浏览器不支持put,delete等method,由该HiddenHttpMethodFilter将xxx?_method=delete 或 xxx?_method=put 转换为标准的
+		http delete、put 方法
+	-->
+	<filter>
+		<filter-name>HiddenHttpMethodFilter</filter-name>
+		<filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>HiddenHttpMethodFilter</filter-name>
+		<servlet-name>xiaochun</servlet-name>
+	</filter-mapping>
+
+
+	<!-- ======= hibernateFilter ======= -->
 	<filter>
 		<filter-name>hibernateFilter</filter-name>
 		<filter-class>org.springframework.orm.hibernate4.support.OpenSessionInViewFilter</filter-class>
@@ -36,65 +127,4 @@
 		<filter-name>hibernateFilter</filter-name>
 		<url-pattern>*.html</url-pattern>
 	</filter-mapping>
-	<filter>
-		<filter-name>forumFilter</filter-name>
-		<filter-class>com.brucezhu.web.ForumFilter</filter-class>
-	</filter>
-	<filter-mapping>
-		<filter-name>forumFilter</filter-name>
-		<url-pattern>*.html</url-pattern>
-	</filter-mapping>
-	<filter-mapping>
-		<filter-name>forumFilter</filter-name>
-		<url-pattern>*.jsp</url-pattern>
-	</filter-mapping>
-	<filter>
-		<filter-name>encodingFilter</filter-name>
-		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
-		<init-param>
-			<param-name>encoding</param-name>
-			<param-value>UTF-8</param-value>
-		</init-param>
-		<init-param>
-			<param-name>forceEncoding</param-name>
-			<param-value>true</param-value>
-		</init-param>
-	</filter>
-	<filter-mapping>
-		<filter-name>encodingFilter</filter-name>
-		<url-pattern>*.html</url-pattern>
-	</filter-mapping>
-	<filter-mapping>
-		<filter-name>encodingFilter</filter-name>
-		<url-pattern>*.jsp</url-pattern>
-	</filter-mapping>
-	<servlet>
-		<servlet-name>xiaochun</servlet-name>
-		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<load-on-startup>3</load-on-startup>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>xiaochun</servlet-name>
-		<url-pattern>*.html</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>default</servlet-name>
-		<url-pattern>/static/*</url-pattern>
-	</servlet-mapping>
-	<!--
-		浏览器不支持put,delete等method,由该HiddenHttpMethodFilter将xxx?_method=delete 或 xxx?_method=put 转换为标准的
-		http delete、put 方法
-	-->
-	<filter>
-		<filter-name>HiddenHttpMethodFilter</filter-name>
-		<filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
-	</filter>
-	<filter-mapping>
-		<filter-name>HiddenHttpMethodFilter</filter-name>
-		<servlet-name>xiaochun</servlet-name>
-	</filter-mapping>
-	<welcome-file-list>
-		<welcome-file>index.jsp</welcome-file>
-	</welcome-file-list>
 </web-app>
-
